
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.openshift.origin.pkg.servicebroker.api.v1;

import "k8s.io/kubernetes/pkg/api/unversioned/generated.proto";
import "k8s.io/kubernetes/pkg/api/v1/generated.proto";
import "k8s.io/kubernetes/pkg/util/intstr/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1";

// ServiceBroker describe a servicebroker
message ServiceBroker {
  // Standard object's metadata.
  optional k8s.io.kubernetes.pkg.api.v1.ObjectMeta metadata = 1;

  // Spec defines the behavior of the Namespace.
  optional ServiceBrokerSpec spec = 2;

  // Status describes the current status of a Namespace
  optional ServiceBrokerStatus status = 3;
}

// ServiceBrokerList is a list of ServiceBroker objects.
message ServiceBrokerList {
  // Standard object's metadata.
  optional k8s.io.kubernetes.pkg.api.unversioned.ListMeta metadata = 1;

  // Items is a list of routes
  repeated ServiceBroker items = 2;
}

// ServiceBrokerSpec describes the attributes on a ServiceBroker
message ServiceBrokerSpec {
  // url defines the address of a ServiceBroker service
  optional string url = 1;

  // name defines the name of a ServiceBroker service
  optional string name = 2;

  // username defines the username to access ServiceBroker service
  optional string username = 3;

  // password defines the password to access ServiceBroker service
  optional string password = 4;

  // Finalizers is an opaque list of values that must be empty to permanently remove object from storage
  repeated string finalizers = 5;
}

// ServiceBrokerStatus is information about the current status of a ServiceBroker
message ServiceBrokerStatus {
  // Phase is the current lifecycle phase of the project
  optional string phase = 1;
}

